--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -3,11 +3,10 @@
     <img src="{{ album.albumArtUrl }}">
     <div class="collection-album-info caption">
       <p>
-        <a class="album-name" ui-sref="album">{{ album.name }}</a>
+        <a class="album-name" ui-sref="album">{{ album.title }}</a>
         <br/>
         <a ui-sref="album">{{ album.artist }}</a>
         <br/>
-        X songs
         {{ album.songs.length }} songs
         <br/>
       </p>
